--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,15 @@
 	
 
 	<dependencies>
+	
+	<!-- MYSQL ============================================================= -->
+	<dependency>
+<groupId>mysql</groupId>
+<artifactId>mysql-connector-java</artifactId>
+<version>5.1.17</version>
+<type>jar</type>
+<scope>compile</scope>
+</dependency>
 
 		<!-- GUAVA ============================================================= -->
 		<dependency>
