--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,11 @@
   <artifactId>RESTFUL-WS</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
+  <name>DASH REST Webservices</name>
+  
+  		
   <dependencies>
+  		
 
 		<!-- Spring Security -->
 
@@ -248,7 +252,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.31</version>
+			<version>${mysql-connector-java.version}</version>
 		</dependency>
   </dependencies>
   
@@ -343,6 +347,11 @@
 		<maven-war-plugin.version>2.4</maven-war-plugin.version>
 		<maven-surefire-plugin.version>2.17</maven-surefire-plugin.version>
 		<cargo-maven2-plugin.version>1.4.8</cargo-maven2-plugin.version>
+		
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<jersey.version>1.17.1</jersey.version>
+		<guice.version>3.0</guice.version>
+		<guava.version>r09</guava.version>
 
 	</properties>
 </project>
