--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,79 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-	<display-name>DASH Web Application</display-name>
-	
-	<!-- CORS filter  -->
-	<filter>
-	   <filter-name>CorsFilter</filter-name>
-	   <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
-	  <init-param>
-	    <param-name>cors.allowed.origins</param-name>
-	    <param-value>*</param-value>
-	  </init-param>
-	  <init-param>
-	    <param-name>cors.allowed.methods</param-name>
-	    <param-value>GET,POST,HEAD,OPTIONS,PUT</param-value>
-	  </init-param>
-	  <init-param>
-	    <param-name>cors.allowed.headers</param-name>
-	    <param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,authorization</param-value>
-	  </init-param>
-	  <init-param>
-	    <param-name>cors.exposed.headers</param-name>
-	    <param-value>Access-Control-Allow-Origin,Access-Control-Allow-Credentials,authorization</param-value>
-	  </init-param>
-	  <init-param>
-	    <param-name>cors.support.credentials</param-name>
-	    <param-value>true</param-value>
-	  </init-param>
-	  <init-param>
-	    <param-name>cors.preflight.maxage</param-name>
-	    <param-value>10</param-value>
-	  </init-param>
-	</filter>
-
-	 <filter-mapping>
-	   <filter-name>CorsFilter</filter-name>
-	   <url-pattern>/*</url-pattern>
-	 </filter-mapping>
-   
-	<listener>
-		<listener-class>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
+  <display-name>DASH Web Application</display-name>
+  <filter>
+    <filter-name>CorsFilter</filter-name>
+    <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+    <init-param>
+      <param-name>cors.allowed.origins</param-name>
+      <param-value>*</param-value>
+    </init-param>
+    <init-param>
+      <param-name>cors.allowed.methods</param-name>
+      <param-value>GET,POST,PUT,DELETE</param-value>
+    </init-param>
+    <init-param>
+      <param-name>cors.allowed.headers</param-name>
+      <param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,authorization</param-value>
+    </init-param>
+    <init-param>
+      <param-name>cors.exposed.headers</param-name>
+      <param-value>Access-Control-Allow-Origin,Access-Control-Allow-Credentials,authorization</param-value>
+    </init-param>
+    <init-param>
+      <param-name>cors.support.credentials</param-name>
+      <param-value>true</param-value>
+    </init-param>
+    <init-param>
+      <param-name>cors.preflight.maxage</param-name>
+      <param-value>10</param-value>
+    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>CorsFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  <listener>
+    <listener-class>
 			org.springframework.web.context.ContextLoaderListener
 		</listener-class>
-	</listener>
-	
-	<context-param>
-		<param-name>contextConfigLocation</param-name>
-		<param-value>classpath:spring/applicationContext.xml</param-value>
-	</context-param>
- 
-	<servlet>
-		<servlet-name>jersey-serlvet</servlet-name>
-		<servlet-class>
+  </listener>
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>classpath:spring/applicationContext.xml</param-value>
+  </context-param>
+  <servlet>
+    <servlet-name>jersey-serlvet</servlet-name>
+    <servlet-class>
 			org.glassfish.jersey.servlet.ServletContainer
 		</servlet-class>
-		<init-param>
-			<param-name>javax.ws.rs.Application</param-name>
-			<param-value>honors.uh.edu.DashApplicationSetup</param-value>			
-		</init-param>		
-		<load-on-startup>1</load-on-startup>
-	</servlet>
- 
-	<servlet-mapping>
-		<servlet-name>jersey-serlvet</servlet-name>
-		<url-pattern>/*</url-pattern>
-	</servlet-mapping>
- 
-	<resource-ref>
-        <description>Database resource for DASH rest web application </description>
-        <res-ref-name>jdbc/testApp</res-ref-name>
-        <res-type>javax.sql.DataSource</res-type>
-        <res-auth>Container</res-auth>
-    </resource-ref>	   
+    <init-param>
+      <param-name>javax.ws.rs.Application</param-name>
+      <param-value>honors.uh.edu.DashApplicationSetup</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>jersey-serlvet</servlet-name>
+    <url-pattern>/*</url-pattern>
+  </servlet-mapping>
+  <resource-ref>
+    <description>Database resource for DASH rest web application </description>
+    <res-ref-name>jdbc/testApp</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
-
-
-
