--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<artifactId>RESTFUL-WS</artifactId>
 	<packaging>war</packaging>
 	<name>RESTFUL-WS</name>
-	<description>REST-FUL web services for DASH backenend</description>
+	<description>REST-FUL web services for DASH backend</description>
 
 	<properties>
 		<spring.version>4.0.3.RELEASE</spring.version>
