Configured Spring Securities default implementation of Access Control Lists.
To use:
 -import the tables in the mysql dir.
 -make changes to the context.xml and aclConfig.xml so that data sources
will connect to the correct DB.
 -only one service method is currently being access controlled.  A @get
request to /users will invoke the postFilter.  Only the users which the
logged in user has read privilages for will be returned in the json.
 
 
 For additional information about this implementation please see
http://krams915.blogspot.com/2011/01/spring-security-3-full-acl-tutorial.html

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RESTFUL-WS-current</name>
+	<name>RESTFUL-WS-ACL</name>
 	<comment></comment>
 	<projects>
 	</projects>
