--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,22 @@
 			<artifactId>tomcat-jdbc</artifactId>
 			<version>7.0.35</version>
 		</dependency>
+		
+		<!-- Spring ACL (c3p0 may be temporary) -->
+		<dependency>
+	    	<groupId>c3p0</groupId>
+	    	<artifactId>c3p0</artifactId>
+	    	<version>0.9.1.2</version>
+	    	<type>jar</type>
+	    	<scope>compile</scope>
+	    </dependency>
+	    <dependency>
+	    	<groupId>net.sf.ehcache</groupId>
+	    	<artifactId>ehcache-core</artifactId>
+	    	<version>2.3.1</version>
+	    	<type>jar</type>
+	    	<scope>compile</scope>
+	    </dependency>
 
 		<!-- ******* JPA/Hibernate ******** -->
 		<dependency>
@@ -205,6 +221,20 @@
 			<artifactId>jcl-over-slf4j</artifactId>     
 			<version>${jcloverslf4j.version}</version>  
 		</dependency>
+		<dependency>
+	    	<groupId>org.slf4j</groupId>
+	    	<artifactId>slf4j-api</artifactId>
+	    	<version>${jcloverslf4j.version}</version>
+	    	<type>jar</type>
+	    	<scope>compile</scope>
+	    </dependency>
+		<dependency>
+	    	<groupId>org.slf4j</groupId>
+	    	<artifactId>slf4j-log4j12</artifactId>
+	    	<version>${jcloverslf4j.version}</version>
+	    	<type>jar</type>
+	    	<scope>compile</scope>
+	    </dependency>
 
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
@@ -220,7 +250,17 @@
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-jaxrs</artifactId>
 			<version>${jackson.version}</version>
-		</dependency>		  				
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-acl</artifactId>
+			<version>${org.springframework.security.version}</version>
+		</dependency>
+		<dependency>
+		   <groupId>org.springframework</groupId>
+		   <artifactId>spring-context-support</artifactId>
+		   <version>${spring.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -230,8 +270,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
 			
