--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<version>0.0.1</version>
 	<groupId>RESTFUL-WS</groupId>
-	<artifactId>RESTFUL-WS</artifactId>
+	<artifactId>VolunteerApp</artifactId>
 	<packaging>war</packaging>
 	<name>RESTFUL-WS</name>
 	<description>REST-FUL web services for DASH backend</description>
@@ -131,7 +131,8 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.27</version>			
+			<version>5.1.27</version>
+			<scope>provided</scope>			
 		</dependency>
 
 		<!-- tomcat jdbc -->
@@ -230,8 +231,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${maven-compiler-plugin.version}</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
 			
