--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,11 +3,11 @@
   <display-name>DASH Web Application</display-name>
   <filter>
     <filter-name>CorsFilter</filter-name>
-    <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
-    <init-param>
+    <filter-class>dash.filters.ResponseCorsFilter</filter-class>
+    <!-- <init-param>
       <param-name>cors.allowed.origins</param-name>
       <param-value>*</param-value>
-    </init-param>
+    </init-param> 
     <init-param>
       <param-name>cors.allowed.methods</param-name>
       <param-value>GET,POST,PUT,DELETE,OPTIONS</param-value>
@@ -15,7 +15,7 @@
     <init-param>
       <param-name>cors.allowed.headers</param-name>
       <param-value>Content-Type,X-Requested-With,accept,Origin,Access-Control-Request-Method,Access-Control-Request-Headers,authorization</param-value>
-    </init-param>
+    </init-param>-->
     <init-param>
       <param-name>cors.exposed.headers</param-name>
       <param-value>Access-Control-Allow-Origin,Access-Control-Allow-Credentials,authorization</param-value>
