--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,14 @@
 		   <artifactId>spring-context-support</artifactId>
 		   <version>${spring.version}</version>
 		</dependency>
+		
+		<!-- Jairo JSON -->
+		<dependency>
+		  <groupId>com.fasterxml.jackson.core</groupId>
+		  <artifactId>jackson-annotations</artifactId>
+		  <version>2.4.0</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
