--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<version>0.0.1</version>
 	<groupId>RESTFUL-WS</groupId>
-	<artifactId>RESTFUL-WS</artifactId>
+	<artifactId>CoreAcl</artifactId>
 	<packaging>war</packaging>
 	<name>RESTFUL-WS</name>
 	<description>REST-FUL web services for DASH backend</description>
