Cleaned RESTFUL-WS master and changed logging to files in /var/log/omcat7
uses @Component now

--- a/pom.xml
+++ b/pom.xml
@@ -129,6 +129,7 @@
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- MySQL JDBC connector -->
@@ -136,6 +137,7 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql-connector-java.version}</version>
+			<scope>provided</scope>
 		</dependency>
 
 		<!-- tomcat jdbc -->
@@ -152,6 +154,12 @@
 	    	<version>2.3.1</version>
 	    	<type>jar</type>
 	    	<scope>compile</scope>
+	    	<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-api</artifactId>
+				</exclusion>
+			</exclusions>
 	    </dependency>
 
 		<!-- ******* JPA/Hibernate ******** -->
@@ -186,25 +194,11 @@
 			<artifactId>logback-classic</artifactId>
 			<version>${logback.version}</version>
 		</dependency>
-		<dependency>                                    
-			<groupId>org.slf4j</groupId>                
-			<artifactId>jcl-over-slf4j</artifactId>     
-			<version>${jcloverslf4j.version}</version>  
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>${jcloverslf4j.version}</version>
 		</dependency>
-		<dependency>
-	    	<groupId>org.slf4j</groupId>
-	    	<artifactId>slf4j-api</artifactId>
-	    	<version>${jcloverslf4j.version}</version>
-	    	<type>jar</type>
-	    	<scope>compile</scope>
-	    </dependency>
-		<dependency>
-	    	<groupId>org.slf4j</groupId>
-	    	<artifactId>slf4j-log4j12</artifactId>
-	    	<version>${jcloverslf4j.version}</version>
-	    	<type>jar</type>
-	    	<scope>compile</scope>
-	    </dependency>
 
 		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
